[tool.poetry]
name = "beremiz-3"
version = "0.1.0"
description = ""
authors = ["gastonfeng <gastonfeng@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
future = "^0.18.2"
loguru = "^0.6.0"
wxPython = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
